# python-fundamentals

./: .editorconfig  .gitignore  pyproject.toml
notebooks/03 - Python Basics/08 - Comparison Operators/: Comparison Operators.ipynb
notebooks/03 - Python Basics/10 - Exercises/: 01 - Exercises.ipynb  02 - Solutions.ipynb
notebooks/04 - Conditional Execution/02 - if_else/: if_else.ipynb
notebooks/04 - Conditional Execution/05 - Exercises/: 01 - Exercises.ipynb
notebooks/05 - Sequence Types/02 - Lists/: Lists.ipynb
notebooks/05 - Sequence Types/03 - Tuples/: Tuples.ipynb
notebooks/05 - Sequence Types/04 - Strings/: Strings.ipynb
notebooks/05 - Sequence Types/05 - Slicing/: Slicing.ipynb
notebooks/05 - Sequence Types/06 - Manipulating Sequences/: Manipulating Sequences.ipynb
notebooks/05 - Sequence Types/07 - Copying Sequences/: Copying Sequences.ipynb
notebooks/05 - Sequence Types/09 - Exercises/: 01 - Exercises.ipynb  02 - Solutions.ipynb
notebooks/06 - Strings/03 - Common String Methods/: Common String Methods.ipynb
notebooks/06 - Strings/05 - Exercises/: 01 - Exercises.ipynb
notebooks/07 - Iteration/03 - For Loops/: For Loops.ipynb
notebooks/07 - Iteration/06 - Exercises/: 01 - Exercises.ipynb  02 - Solutions.ipynb
notebooks/08 - Dictionaries/05 - Exercises/: 01 - Exercises.ipynb  02 - Solutions.ipynb
notebooks/09 - Sets/03 - Exercises/: 01 - Exercises.ipynb
notebooks/10 - Comprehensions/04 - Exercises/: 01 - Exercises.ipynb
notebooks/11 - Exceptions/04 - Exercises/: 01 - Exercises.ipynb
notebooks/15 - Practice Test 1/: Exam 1.ipynb
(+3 files in other folders)
