[project]
name = "python-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "notebook>=7.5.2",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "ruff>=0.14.11",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
